--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
     "scripts": {
         "build": "tsc",
         "start": "npm run build && node dist/index.js",
-        "dev": "ts-node src/index.ts"
+        "dev": "ts-node src/index.ts",
+        "test": "npm run build && vitest run",
+        "test:watch": "vitest",
+        "coverage": "vitest run --coverage"
     },
     "dependencies": {
         "@modelcontextprotocol/sdk": "^1.11.0",
         "zod": "^3.22.4"
     },
     "devDependencies": {
-        "typescript": "^5.3.3",
+        "@types/node": "^20.11.5",
+        "@vitest/coverage-v8": "^3.1.3",
         "ts-node": "^10.9.1",
-        "@types/node": "^20.11.5"
+        "typescript": "^5.3.3",
+        "vitest": "^3.1.3"
     },
     "engines": {
         "node": ">=18"
