--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     },
     "dependencies": {
         "@modelcontextprotocol/sdk": "^1.11.0",
-        "zod": "^3.22.4"
+        "zod": "^3.22.4",
+        "node-fetch": "^3.3.2"
     },
     "devDependencies": {
         "@types/node": "^20.11.5",
