--- a/package.json
+++ b/package.json
@@ -18,14 +18,16 @@
     "dependencies": {
         "@modelcontextprotocol/sdk": "^1.11.0",
         "zod": "^3.22.4",
-        "node-fetch": "^3.3.2"
+        "node-fetch": "^3.3.2",
+        "yargs": "^17.7.2"
     },
     "devDependencies": {
         "@types/node": "^20.11.5",
         "@vitest/coverage-v8": "^3.1.3",
         "ts-node": "^10.9.1",
         "typescript": "^5.3.3",
-        "vitest": "^3.1.3"
+        "vitest": "^3.1.3",
+        "@types/yargs": "^17.0.24"
     },
     "engines": {
         "node": ">=18"
